manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-tutorial
  namespace: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-tutorial
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fastapi-tutorial
      name: fastapi-tutorial
    spec:
      containers:
      - image: ghcr.io/gwright99/fastapitutorial:latest
        imagePullPolicy: Always
        name: fastapi-tutorial
        ports:
        - containerPort: 8081
          name: blah
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File

        volumeMounts:
        - mountPath: /ghcontent
          name: repo-content
        - mountPath: /tmp/fastapi
          name: tempsqlite
        # Mounting envfile
        - mountPath: /ghcontent/code/.env
          readOnly: true
          name: envfile
      dnsPolicy: ClusterFirst

      imagePullSecrets:
      - name: ghcr

      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30

      volumes:
      - emptyDir: {}
        name: repo-content
      - emptyDir": {}
        name: tempsqlite
      # .env from local development machine. Implicitly understood that secret resides in `fastapi` namespace.
      - name: envfile
        secret:
          secretName: envfile
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-tutorial
  namespace: fastapi
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: fastapi-tutorial
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    argocd.argoproj.io/instance: fastapi-tutorial
  name: fastapi-tutorial
  namespace: fastapi
spec:
  hostnames:
  - fastapi.grahamwrightk8s.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: public-cloudflare
    namespace: gloo-system
  rules:
    # This works for 
    #  - 'https://DOMAIN/tutorial/healthcheck'
    #  - 'https://DOMAIN/tutorial/'
    # Breaks for root URL without traiing '/', so need second rule
    #  - 'https://DOMAIN/tutorial'
    - backendRefs:
      - group: ""
        kind: Service
        name: fastapi-tutorial
        port: 80
        weight: 1
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            replacePrefixMatch: /
            type: ReplacePrefixMatch
      matches:
      #- method: GET  # Had to comment this out since it was blocking POST calls
      -  path:
          type: PathPrefix
          # NOTE: Trailing slash important to not get `//` from URLs with more slashes later.
          # https://github.com/kubernetes-sigs/gateway-api/issues/1954
          value: "/tutorial/"

    # This works for 
    #  - 'https://DOMAIN/tutorial'
    - backendRefs:
      - group: ""
        kind: Service
        name: fastapi-tutorial
        port: 80
        weight: 1
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            replacePrefixMatch: /
            type: ReplacePrefixMatch
      matches:
      - method: GET
        path:
          type: PathPrefix
          value: "/tutorial"

  # Example from Lambda app for how to take nice human-friendly URL and retarget.
  # - backendRefs:
  #   - group: ""
  #     kind: Service
  #     name: app2
  #     port: 8080
  #     weight: 1
  #   filters:
  #   - type: URLRewrite
  #     urlRewrite:
  #       path:
  #         replacePrefixMatch: /2015-03-31/functions/function/invocations
  #         type: ReplacePrefixMatch
  #   matches:
  #   - method: POST
  #     path:
  #       type: PathPrefix
  #       value: /app2
